# shell-whisperer

./: README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
whisperer/: main.py  utils.py
