[tool.poetry]
name = "shell-whisperer"
version = "0.1.3"
description = "Shell Whisperer is a command-line tool that generates CLI (Command Line Interface) commands based on natural language input."
authors = ["ishan <ishannagpal554@gmail.com>"]
readme = "README.md"
packages = [{include = "shell_whisperer"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.29.0"
openai = "^0.27.5"
typer = "^0.8.0"
rich = "^13.3.5"
pyperclip = "^1.8.2"

[tool.poetry.scripts]
whisperer = "shell_whisperer.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
